src/client/screen.css
body {
	margin: 0;
	padding: 0;
	margin-bottom: 13px;
}


/* "Let's Code" theme (our only theme) */

.theme-lets-code {
	/* text */
	font-family: "alwyn-new-rounded-web", "Helvetica", sans-serif;

	/* colors */
	background-color: #41a9cc;
}

p {
	/* text */
	font-size: 15px;
	font-weight: 300;
	line-height: 18px;

	/* colors */
	color: #0d576d;
}

strong {
	font-weight: 300;
	color: white;
}


/* Button block */

.button {
	/* size */
	display: block;
	width: 100%;
	padding: 0;
	margin: 0;

	/* text */
	font-family: inherit;
	text-align: center;
	text-transform: uppercase;
	text-decoration: none;

	/* decorations */
	border: none;
	border-radius: 2px;
}

.button:active, .button._active_ {
	box-shadow: none;
	position: relative;
	top: 1px;
}

.button--action {
	/* size */
	height: 35px;

	/* text */
	font-size: 16px;
	font-weight: 400;
	line-height: 35px;    /* vertical centering */

	/* color */
	color: white;
	background-color: #00799c;
	box-shadow: 0 1px 0 0 #0d576d;
}

.button--action:hover, .button--action._hover_ {
	background-color: #006f8f;
}

.button--drawing {
	/* size */
	height: 30px;

	/* text */
	font-size: 12px;
	font-weight: 600;
	line-height: 30px;    /* vertical centering */

	/* color */
	background-color: #e5e5e5;
	color: #595959;
	box-shadow: 0 1px 0 0 #a7a9ab;
}

.button--drawing:hover, .button--drawing._hover_ {
	background-color: #d9d9d9;
}


/* Drawing Area block */

.drawing-area {
	position: relative;
}

.drawing-area__canvas {
	height: 474px;
	background-color: white;
	border-radius: 2px;
}

.drawing-area__arrow {
	/* image */
	background-image: url(/images/arrow.png);
	background-repeat: no-repeat;
	background-position: center;
	height: 9px;

	/* position */
	position: absolute;
	top: 0px;
	left: 0px;
	right: 0px;
}

.drawing-area__button {
	/* position */
	position: absolute;
	top: 15px;
	right: 15px;

	/* layout */
	width: 70px;
}

.drawing-area__button:active, .drawing-area__button._active_ {
	position: absolute;
	top: 16px;
}


/* Logo block */

.logo {
	/* size */
	height: 30px;

	/* text */
	text-align: center;
	line-height: 30px;     /* vertical centering */
	font-size: 30px;
	font-weight: 600;

	/* color */
	color: white;
}


/* 'Not Found' block */

.not-found {
	/* text */
	text-align: center;
	line-height: 200px;     /* vertical centering */
	font-size: 200px;
	font-weight: 600;

	/* color */
	color: #0d576d;
}


/* Home page */

#logo {
	margin-top: 12px;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 0px;
}

#tagline {
	margin-top: 5px;
	margin-bottom: 0px;
	text-align: center;
}

#drawing-area-container {
	width: 980px;
	margin-top: 10px;
	margin-left: auto;
	margin-right: auto;
}

#footer {
	line-height: 1.2;
	text-align: center;
	margin-top: 13px;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 0;
}

#join-us {
	margin-top: 13px;
	margin-left: auto;
	margin-right: auto;
	width: 175px;
}


/* 404 Page */

#logo-404 {
	margin-top: 60px;
}

#header-404 {
	margin-top: 0;
	margin-bottom: 0;
}

#tagline-404 {
	margin-top: 18px;
	text-align: center;
}

#draw-something-404 {
	margin-top: 18px;
	margin-left: auto;
	margin-right: auto;
	width: 225px;
}

